# nested-shortcuts

./: Cargo.toml  README.md  example-menu.yml
src/: gui.rs  main.rs  menu.rs  theme.rs
